@@ -1,27 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id$ -->
-<!DOCTYPE specification PUBLIC "-//Howard Ship//Tapestry Specification 1.1//EN" "http://tapestry.sf.net/dtd/Tapestry_1_1.dtd">
-<specification class="tutorial.adder.Home">
-  <component id="ifError" type="Conditional">
-    <binding name="condition" property-path="error"/>
-  </component>
-  <component id="insertError" type="Insert">
-    <binding name="value" property-path="error"/>
-  </component>
-  <component id="form" type="Form">
-    <binding name="listener" property-path="formListener"/>
-  </component>
-  <component id="inputNewValue" type="TextField">
-    <binding name="text" property-path="newValue"/>
-  </component>
-  <component id="e" type="Foreach">
-    <binding name="source" property-path="items"/>
-    <static-binding name="element">tr</static-binding>
-  </component>
-  <component id="insertCurrentValue" type="Insert">
-    <binding name="value" property-path="components.e.value"/>
-  </component>
-  <component id="insertTotal" type="Insert">
-    <binding name="value" property-path="total"/>
-  </component>
-</specification>
