@@ -1,0 +1,29 @@
+<!-- $Id$ -->
+<span jwcid="border">
+
+Tapestry includes a number of form-related components.  Tapestry components are
+responsible for reading properties when a page is rendered, to supply default values,
+and writing properties when the form is submitted; it is never necesssary to write
+code to directly read HTTP parameters.
+
+<p>
+In addition, Tapestry includes a suite of validating form components, special text
+fields that can validate user input and generate error messages as needed.
+
+<span jwcid="showError"/>
+
+<form jwcid="form">
+
+<table>
+  <tr>
+  	<th><span jwcid="intLabel"/></th>
+  	<td><input jwcid="inputInt"/></td>
+  </tr>
+  <tr>
+  	<td></td>
+  	<td><input jwcid="continue"/></td>
+</table>
+
+</form>
+
+</span>
