@@ -1,3 +1,8 @@
+* Oct 28 2001 hship
+
+tutorial:
+- Add a new tab, Fields, and the start of a demo of validating input fields.
+
 * Oct 20 2001 hship
 
 tutorial:
